<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/shape_card_view"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tool_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_menu"
            android:elevation="5dp"
            android:theme="?attr/actionBarStyle"
            app:displayHomeAsUp="false"
            app:fitStatusBar="false"
            app:title="@string/set_book_tag"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:titleTextAppearance="@style/ToolbarTitle" />

        <io.legado.app.ui.widget.text.AccentTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:text="@string/bookshelf_tag_new_label" />

        <io.legado.app.lib.theme.view.ThemeEditText
            android:id="@+id/et_new_tags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bookshelf_tag_new_hint"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <io.legado.app.ui.widget.text.AccentTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:text="@string/book_tag_existing" />

        <io.legado.app.lib.theme.view.ThemeEditText
            android:id="@+id/et_filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bookshelf_tag_search_existing"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:overScrollMode="ifContentScrolls">

            <LinearLayout
                android:id="@+id/ll_tags"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

        </androidx.core.widget.NestedScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:padding="12dp"
                android:text="@string/cancel"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:id="@+id/tv_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:padding="12dp"
                android:text="@string/ok"
                tools:ignore="RtlHardcoded" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
