<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <io.legado.app.ui.book.read.page.ReadView
        android:id="@+id/read_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <View
        android:id="@+id/text_menu_position"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/cursor_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/select_start"
        android:src="@drawable/ic_cursor_left"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/cursor_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/select_end"
        android:src="@drawable/ic_cursor_right"
        android:visibility="invisible" />

    <io.legado.app.ui.book.read.ReadMenu
        android:id="@+id/read_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

    <io.legado.app.ui.book.read.SearchMenu
        android:id="@+id/search_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/read_aloud_mini_bar"
        android:layout_width="148dp"
        android:layout_height="52dp"
        android:layout_gravity="bottom|start"
        android:layout_marginStart="18dp"
        android:layout_marginBottom="124dp"
        android:elevation="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="7dp"
        android:paddingTop="5dp"
        android:paddingEnd="8dp"
        android:paddingBottom="5dp"
        android:visibility="gone">

        <FrameLayout
            android:id="@+id/read_aloud_mini_cover_shell"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:padding="2dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_read_aloud_mini_cover"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/img_cover"
                android:scaleType="centerCrop" />

        </FrameLayout>

        <io.legado.app.ui.widget.image.ImageButton
            android:id="@+id/iv_read_aloud_mini_play"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_marginStart="7dp"
            android:contentDescription="@string/audio_play"
            android:padding="9dp"
            android:src="@drawable/ic_play_24dp" />

        <io.legado.app.ui.widget.image.ImageButton
            android:id="@+id/iv_read_aloud_mini_close"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="5dp"
            android:contentDescription="@string/stop"
            android:padding="7dp"
            android:src="@drawable/ic_clear" />

        <TextView
            android:id="@+id/tv_read_aloud_mini_title"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="gone"
            tools:text="hidden" />

    </LinearLayout>

    <View
        android:id="@+id/navigation_bar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/background_menu"
        android:layout_gravity="bottom" />

</FrameLayout>
